--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -16,8 +16,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Crimson+Text
-    :ital,wght@0,400;0,600;1,600&family=Open+Sans:wght@400;600&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,600&family=Open+Sans:wght@400;600&family=Poppins&display=swap"
+   rel="stylesheet">
 
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link">
@@ -67,7 +67,7 @@
           <li><a class="mobile-nav-style" href="{{ url_for('login') }}">Login</a></li>
           <li><a class="mobile-nav-style" href="{{ url_for('sign_up') }}">Sign Up</a></li>
           {% endif %}
-          <br>
+        
           <li><a class="sidenav-close" href="#!">&times; Close</a></li>
         </ul>
 
@@ -92,7 +92,7 @@
           {% if messages %}
           {% for message in messages %}
           <div class="row flashes">
-            <h4 class="purple lighten-4 center-align">{{ message }}</h4>
+            <h1 class="purple lighten-4 center-align flash-font">{{ message }}</h1>
           </div>
           {% endfor %}
           {% endif %}
@@ -176,19 +176,19 @@
   
             <li>
               <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener">
-                <i class="fab fa-facebook-f" aria-hidden="true" tabindex="0"></i>
+                <i class="fab fa-facebook-f" aria-hidden="true"></i>
               </a>
             </li>
   
             <li>
               <a href="https://www.instagram.com" aria-label="Instagram" target="_blank" rel="noopener">
-                <i class="fab fa-instagram" aria-hidden="true" tabindex="0"></i>
+                <i class="fab fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
   
             <li>
               <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank" rel="noopener">
-                <i class="fab fa-twitter" aria-hidden="true" tabindex="0"></i>
+                <i class="fab fa-twitter" aria-hidden="true"></i>
               </a>
             </li>
   
@@ -204,19 +204,19 @@
 
   <!--  Scripts-->
 
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
   <!--Sweet Alert-->
 
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
   <!-- Custom scripts -->
 
-  <script src="{{ url_for('static', filename='js/materialize.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='js/light-mode.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='js/contact-email.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='js/init.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/materialize.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/light-mode.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/contact-email.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/init.js') }}"></script>
 
 
   {% block splide_js %}
@@ -224,7 +224,7 @@
 
 
   <!--EmailJS-->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script type="text/javascript">(function () {
       emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
     })();
