--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -101,6 +101,6 @@
 
 
 {% block splide_js %}
-<script src="static/js/splide.js"></script>
+<script src="{{ url_for('static', filename='js/splide.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
-{% endblock %}
+{% endblock %} 
