--- a/templates/add_featured.html
+++ b/templates/add_featured.html
@@ -81,7 +81,8 @@
                 </div>
                 <div class="row add-button-padding">
                     <div class="col l6 center">
-                        <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles" type="submit">
+                        <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles"
+                            type="submit">
                             Create review
                         </button>
                     </div>
