--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -25,8 +25,7 @@
                 <div class="row">
                     <div class="input-field col s6 l6">
                         <input id="affiliate" type="url" name="affiliate" class="validate tooltipped"
-                            data-position="bottom" data-tooltip="Please add a link to a bookseller"
-                            required>
+                            data-position="bottom" data-tooltip="Please add a link to a bookseller" required>
                         <label for="affiliate">Add bookseller link</label>
                     </div>
 
@@ -72,8 +71,6 @@
                             <label for="st2"></label>
                             <input type="radio" name="rating" title="1 star" id="st1" value="1" required />
                             <label for="st1"></label>
-
-
                         </div>
 
                     </div>
@@ -81,7 +78,8 @@
                 </div>
                 <div class="row add-button-padding">
                     <div class="col s6 l6 center">
-                        <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles" type="submit">
+                        <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles"
+                            type="submit">
                             Create review
                         </button>
                     </div>
