--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,25 @@
   <div class="col s12 m12">
     <div class="card card-colour card-margin darken-1">
       <div class="card-content">
-        <span class="home-card-title">
-          Card Title
-        </span>
-        
-        <p id="light-mode-font">I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
+        <div class="home-card-title center">
+          A place for horror fans
+        </div>
+       
+        <p id="light-mode-font">
+          Do you love spooky stories? 
+          Are you a fan of blood-chilling suspense?
+          Or want to share excitement for any book that explores the range of fear?
+          Do believe that horror is so much more than a genre?
+          If so, the Horror House is the place for you.
+       </p>
       </div>
     </div>
   </div>
 </div>
 
 <div class="row center">
-  <a href="{{ url_for('reviews') }}" 
-    class="btn-large waves-effect waves-dark lighten-1 btn-styles">Get
-    Started
+  <a href="{{ url_for('reviews') }}" class="btn-large waves-effect waves-dark lighten-1 btn-styles">
+  Browse reviews
   </a>
 </div>
 {% endblock %}
@@ -38,33 +42,41 @@
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center icon-styles"><i class="material-icons">book</i></h2>
-          <h3 class="center custom-font">Speeds up development</h3>
+          <h3 class="center custom-font">Read horror books</h3>
 
-          <p>We did most of the heavy lifting for you to provide a default stylings that incorporate our custom
-            components. Additionally, we refined animations and transitions to provide a smoother experience for
-            developers.</p>
+          <p>First, sit down, relax and slip into the terrifying world of a new 
+            horror novel or re-read your favourites. Watch or read a frightening play
+            with horror motifs. Or enjoy the different types of fear in each story
+            of a short story collection. 
+          </p>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center icon-styles"><i class="material-icons">favorite_border</i></h2>
-          <h3 class="center custom-font">User Experience Focused</h3>
+          <h3 class="center custom-font">Check out our reviews</h3>
 
-          <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework
-            that incorporates components and animations that provide more feedback to users. Additionally, a single
-            underlying responsive system across all platforms allow for a more unified user experience.</p>
+          <p class="light">Take a break from reading your book to see
+            what other Horror House fans are saying. Find books you already like
+            and check to see if there's already a review. If you're not seeing your 
+            current book on our list, think of what you'd like to say. Then create
+            an account so you can a create new review.
+          </p>
         </div>
       </div>
 
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center icon-styles"><i class="material-icons">keyboard</i></h2>
-          <h3 class="center custom-font">Easy to work with</h3>
+          <h3 class="center custom-font">Write your own</h3>
 
-          <p class="light">We have provided detailed documentation as well as specific code examples to help new users
-            get started. We are also always open to feedback and can answer any questions a user may have about
-            Materialize.</p>
+          <p class="light">Once you've created your Horror House account and become
+            a reviewer, you can share your own opinions on horror fiction. You can also rate
+            and add different subgenre categories that will appear with your review. 
+            Please also include a book image .jpg or .png link and bookseller link 
+            so that other Horror House fans can find the book for themselves.
+          </p>
         </div>
       </div>
     </div>
