--- a/templates/login.html
+++ b/templates/login.html
@@ -16,24 +16,24 @@
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">account_box</i>
-              <input id="username" type="text" name="username" class="validate"
-              minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
+              <input id="username" type="text" name="username" class="validate" minlength="5" maxlength="15"
+                pattern="^[a-zA-Z0-9]{5,15}$" required>
               <label for="username">Username</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
-              <input id="password" type="password" name="password" class="validate"
-              minlength="5" maxlength="15" pattern="^(?=.{5,15})(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$&^]).*$" required>
+              <input id="password" type="password" name="password" class="validate" minlength="5" maxlength="15"
+                pattern="^(?=.{5,15})(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$&^]).*$" required>
               <label for="password">Password</label>
             </div>
-          </div>  
-            <div class="center">
-              <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit"
-                name="action">Login
-              </button>
-            </div>
+          </div>
+          <div class="center">
+            <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit"
+              name="action">Login
+            </button>
+          </div>
         </form>
       </div>
     </div>
