--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,12 +101,16 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 32px;
   font-size: 2.8rem;
-  padding-bottom: 3%;
+  padding-bottom: 5%;
 }
 
 h3.custom-font {
   font-size: 2rem;
   font-family: Arial;
+}
+
+h3.manage-featured {
+  text-shadow: 1px 1px 2px black;
 }
 
 h4 {
@@ -545,7 +549,7 @@ ul#nav-mobile.sidenav {
 
 @media only screen and (max-width : 600px) {
   h1.custom-font {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
   }
 
   .card.card-margin {
