--- a/templates/general-templates/base.html
+++ b/templates/general-templates/base.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{% block title %}{% endblock %}</title>
 
+  <meta property='og:title' content='Horror House Book Reviews'/>
+  <meta property='og:image' content='https://i.postimg.cc/5yPsHXXQ/meta-image.png'/>
+  <meta property='og:description' content='Horror House reviews is a place for fans of horror fiction. 
+  Reviewers can create an account, read reviews by others, and write their own review.'/>
+  <meta property='og:url' content='https://horror-house-reviews.herokuapp.com/'/>
+
 
 
   <!-- CSS  -->
